Fetch: 깃이그노어 재추가

--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,7 @@ Memo.txt/
 /DonateModel.Swift
 DonateModel.Swift
 /CategoryZ/JsonFiles
-/CategoryZ/SecretFiies
+/CategoryZ/SecretFiles
 ### Swift ###
 # Xcode
 #
