Fix: 카메라 권한 이슈를 해결하였습니다.

--- a/CategoryZ/Info.plist
+++ b/CategoryZ/Info.plist
@@ -2,8 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>UIUserInterfaceStyle</key>
-	<string>Light</string>
+	<key>NSCameraUsageDescription</key>
+	<string>카메라 권한 필요합니다.</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>갤러리 권한 필요합니다. </string>
 	<key>CFBundleURLTypes</key>
 	<array>
 		<dict>
